--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   position: relative;
-
+  margin: 0;
+  padding: 0;
 }
 
 /*ヘッダー*/
@@ -154,7 +155,7 @@ img {
 
   section4 {
     width: 80%;
-    margin: 20px 10px;
+    margin-left: 30px;
 
   }
 }
@@ -192,6 +193,7 @@ img {
     padding-top: 16px;
     padding-bottom: 16px;
     flex-wrap: wrap;
+    margin-left: 20px;
   }
 }
 
@@ -317,6 +319,8 @@ img {
 .Form-Btn:hover {
   background-color: #fff;
   color: #545454;
+  border: solid 1px black;
+
 
 
 }
